# gdrive_link_transformer

./: .gitignore  Pipfile  README.md  gdrive-direct-link.spec  gdrive_direct_link.py  gdrive_direct_link.spec  pyproject.toml  test.py
gdrive_link_transformer/: gdrive_direct_link.py
tests/: test_gdrive_direct_link.py
